# crs-tools

./: CLAUDE.md  Cargo.toml  README.md  axiom.yaml
messages/: messages.proto
nodes/: crsutil.rs  get_crs_axis_info.rs  get_crs_axis_info_test.rs  get_crs_info.rs  get_crs_info_test.rs  get_crs_representation.rs  get_crs_representation_test.rs  get_utm_zone.rs  get_utm_zone_test.rs  lon_lat_to_web_mercator.rs  lon_lat_to_web_mercator_test.rs  parse_crs.rs  parse_crs_test.rs  reproject_bounding_box.rs  reproject_bounding_box_test.rs  transform_coordinate.rs  transform_coordinate_test.rs  transform_coordinates.rs  transform_coordinates_test.rs  validate_crs.rs  validate_crs_test.rs  web_mercator_to_lon_lat.rs  web_mercator_to_lon_lat_test.rs
